tab image and name update, player fix

--- a/PoolToolWebApp-my_new_branch/poolTool/templates/createContact.html
+++ b/PoolToolWebApp-my_new_branch/poolTool/templates/createContact.html
@@ -71,11 +71,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Login V5</title>
+    <link rel="icon" href="{% static 'admin/img/blackball.png'%}">
+    <title>Sign up!</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
-    <link rel="icon" type="image/png" href="{% static 'admin/img/icons/favicon.ico' %}"/>
+{#    <link rel="icon" type="image/png" href="{% static 'admin/img/icons/favicon.ico' %}"/>#}
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="{% static 'admin/vendor/bootstrap/css/bootstrap.min.css' %}">
     <!--===============================================================================================-->
