--- a/PoolToolWebApp-my_new_branch/poolTool/templates/fixtures.html
+++ b/PoolToolWebApp-my_new_branch/poolTool/templates/fixtures.html
@@ -6,8 +6,9 @@
 <script src="{% static 'admin/js/jquery.gracket.min.js'%}"></script>
 <html lang="en-US">
 <head>
+    <link rel="icon" href="{% static 'admin/img/blackball.png'%}">
 	<meta charset="UTF-8">
-	<title>Testing jQuery Gracket Version 1.5.5</title>
+	<title>PoolTool Fixture Bracket</title>
 
 	<!-- basic styles -->
 	<style type="text/css">
