--- a/PoolToolWebApp-my_new_branch/poolTool/templates/thanks.html
+++ b/PoolToolWebApp-my_new_branch/poolTool/templates/thanks.html
@@ -1,7 +1,10 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'poolTool/index.css' %}">
 <script src="{% static 'poolTool/jquery-3.3.1.min.js' %}"></script>
-
+<head>
+       <link rel="icon" href="{% static 'admin/img/blackball.png'%}">
+    <title>Thanks</title>
+</head>
 <body>
   <hgroup>
     <h1>Pool Tool Signup</h1>
