--- a/PoolToolWebApp-my_new_branch/poolTool/templates/players.html
+++ b/PoolToolWebApp-my_new_branch/poolTool/templates/players.html
@@ -29,11 +29,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Login V5</title>
+    <link rel="icon" href="{% static 'admin/img/blackball.png'%}">
+    <title>PoolTool Players</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
-    <link rel="icon" type="image/png" href="{% static 'admin/img/icons/favicon.ico' %}"/>
+{#    <link rel="icon" type="image/png" href="{% static 'admin/img/icons/favicon.ico' %}"/>#}
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="{% static 'admin/vendor/bootstrap/css/bootstrap.min.css' %}">
     <!--===============================================================================================-->
@@ -70,6 +71,9 @@
 
             <div class="p-t-13 p-b-9">
             <table>
+            <script>
+                console.warn({{ dict2|safe }})
+            </script>
             <th>Name</th>
 
                     {% for day in dict2.persons %}
