--- a/PoolToolWebApp-my_new_branch/poolTool/templates/fixtures.html
+++ b/PoolToolWebApp-my_new_branch/poolTool/templates/fixtures.html
@@ -3,81 +3,176 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT"
         crossorigin="anonymous"></script>
-<script src="{% static 'admin/js/jquery.gracket.min.js'%}"></script>
+<script src="{% static 'admin/js/jquery.gracket.min.js' %}"></script>
 <html lang="en-US">
 <head>
-    <link rel="icon" href="{% static 'admin/img/blackball.png'%}">
-	<meta charset="UTF-8">
-	<title>PoolTool Fixture Bracket</title>
+    <link rel="icon" href="{% static 'admin/img/blackball.png' %}">
+    <meta charset="UTF-8">
+    <title>PoolTool Fixture Bracket</title>
 
-	<!-- basic styles -->
-	<style type="text/css">
-		.g_gracket { width: 3860px; background-image: url({% static '/admin/img/bg-01.jpg' %}); padding: 55px 15px 5px; line-height: 100%; position: relative; overflow: hidden;}
-		.g_round { float: left; margin-right: 70px; }
-		.g_game { position: relative; margin-bottom: 15px; }
-		.g_gracket h3 { margin: 0; padding: 10px 8px 8px; font-size: 18px; font-weight: normal; color: #fff}
-		.g_team { background: #3597AE; }
-		.g_team:last-child {  background: #FCB821; }
-		.g_round:last-child { margin-right: 20px; }
-		.g_winner { background: #444; }
-		.g_winner .g_team { background: none; }
-		.g_current { cursor: pointer; background: #A0B43C!important; }
-		.g_round_label { top: -5px; font-weight: normal; color: #CCC; text-align: center; font-size: 18px; }
-	</style>
+    <!-- basic styles -->
+    <style type="text/css">
+        .g_gracket {
+            width: 3860px;
+            background-image: url({% static '/admin/img/bg-01.jpg' %});
+            padding: 55px 15px 5px;
+            line-height: 100%;
+            position: relative;
+            overflow: hidden;
+        }
 
-	<!-- dependencies -->
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.js"></script>
+        .g_round {
+            float: left;
+            margin-right: 70px;
+        }
 
-	<!-- main lib -->
-	<script type="text/javascript" src="{% static 'admin/js/jquery.gracket.min.js'%}"></script>
-	<script type="text/javascript" src="test.js"></script>
+        .g_game {
+            position: relative;
+            margin-bottom: 15px;
+        }
+
+        .g_gracket h3 {
+            margin: 0;
+            padding: 10px 8px 8px;
+            font-size: 18px;
+            font-weight: normal;
+            color: #fff
+        }
+
+        .g_team {
+            background: #3597AE;
+        }
+
+        .g_team:last-child {
+            background: #FCB821;
+        }
+
+        .g_round:last-child {
+            margin-right: 20px;
+        }
+
+        .g_winner {
+            background: #444;
+        }
+
+        .g_winner .g_team {
+            background: none;
+        }
+
+        .g_current {
+            cursor: pointer;
+            background: #A0B43C !important;
+        }
+
+        .g_round_label {
+            top: -5px;
+            font-weight: normal;
+            color: #CCC;
+            text-align: center;
+            font-size: 18px;
+        }
+    </style>
+
+    <!-- dependencies -->
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.js"></script>
+
+    <!-- main lib -->
+    <script type="text/javascript" src="{% static 'admin/js/jquery.gracket.min.js' %}"></script>
+    <script type="text/javascript" src="test.js"></script>
 
 </head>
-<body>
+<body style="margin: 0;">
 
-	<!-- empty gracket element -->
-	<div class="my_gracket"></div>
+<!-- empty gracket element -->
+<div class="my_gracket"></div>
+<div class="container-login100" style="background-image: url({% static '/admin/img/bg-01.jpg' %});'">
+<script type="text/javascript">
+    (function (win, doc, $) {
 
-	<script type="text/javascript">
-		(function(win, doc, $){
+        console.warn("Make sure the min-width of the .gracket_h3 element is set to width of the largest name/player. Gracket needs to build its canvas based on the width of the largest element. We do this my giving it a min width. I'd like to change that!");
+        console.warn({{ dict2.myData|safe }})
+        console.warn({{ dict2|safe }})
+        // Fake Data
+        win.TestData = {{ dict2.myData|safe }};
+        win.TestData = [
+        	[
+        		[ {"name" : "Erik Zettersten", "id" : "erik-zettersten", "seed" : 1, "displaySeed": "D1", "score" : 47 }, {"name" : "Andrew Miller", "id" : "andrew-miller", "seed" : 2} ],
+        		[ {"name" : "James Coutry", "id" : "james-coutry", "seed" : 3}, {"name" : "Sam Merrill", "id" : "sam-merrill", "seed" : 4}],
+        		[ {"name" : "Anothy Hopkins", "id" : "anthony-hopkins", "seed" : 5}, {"name" : "Everett Zettersten", "id" : "everett-zettersten", "seed" : 6} ],
+        		[ {"name" : "John Scott", "id" : "john-scott", "seed" : 7}, {"name" : "Teddy Koufus", "id" : "teddy-koufus", "seed" : 8}],
+        		[ {"name" : "Arnold Palmer", "id" : "arnold-palmer", "seed" : 9}, {"name" : "Ryan Anderson", "id" : "ryan-anderson", "seed" : 10} ],
+        		[ {"name" : "Jesse James", "id" : "jesse-james", "seed" : 1}, {"name" : "Scott Anderson", "id" : "scott-anderson", "seed" : 12}],
+        		[ {"name" : "Josh Groben", "id" : "josh-groben", "seed" : 13}, {"name" : "Sammy Zettersten", "id" : "sammy-zettersten", "seed" : 14} ],
+        		[ {"name" : "Jake Coutry", "id" : "jake-coutry", "seed" : 15}, {"name" : "Spencer Zettersten", "id" : "spencer-zettersten", "seed" : 16}]
+        	],
+        	[
+        		[ {"name" : "Erik Zettersten", "id" : "erik-zettersten", "seed" : 1}, {"name" : "James Coutry", "id" : "james-coutry", "seed" : 3} ],
+        		[ {"name" : "Anothy Hopkins", "id" : "anthony-hopkins", "seed" : 5}, {"name" : "Teddy Koufus", "id" : "teddy-koufus", "seed" : 8} ],
+        		[ {"name" : "Ryan Anderson", "id" : "ryan-anderson", "seed" : 10}, {"name" : "Scott Anderson", "id" : "scott-anderson", "seed" : 12} ],
+        		[ {"name" : "Sammy Zettersten", "id" : "sammy-zettersten", "seed" : 14}, {"name" : "Jake Coutry", "id" : "jake-coutry", "seed" : 15} ]
+        	],
+        	[
+        		[ {"name" : "Erik Zettersten", "id" : "erik-zettersten", "seed" : 1}, {"name" : "Anothy Hopkins", "id" : "anthony-hopkins", "seed" : 5} ],
+        		[ {"name" : "Ryan Anderson", "id" : "ryan-anderson", "seed" : 10}, {"name" : "Sammy Zettersten", "id" : "sammy-zettersten", "seed" : 14} ]
+        	],
+        	[
+        		[ {"name" : "Erik Zettersten", "id" : "erik-zettersten", "seed" : 1}, {"name" : "Ryan Anderson", "id" : "ryan-anderson", "seed" : 10} ]
+        	],
+        	[
+        		[ {"name" : "Erik Zettersten", "id" : "erik-zettersten", "seed" : 1} ]
+        	]
+        ];
 
-			console.warn("Make sure the min-width of the .gracket_h3 element is set to width of the largest name/player. Gracket needs to build its canvas based on the width of the largest element. We do this my giving it a min width. I'd like to change that!");
-			console.warn({{ dict2.myData|safe }})
-			console.warn({{ dict2|safe }})
-			// Fake Data
-            win.TestData = {{ dict2.myData|safe }};
-			{#win.TestData = [#}
-			{#	[#}
-			{#		[ {"name" : "Erik Zettersten", "id" : "erik-zettersten", "seed" : 1, "displaySeed": "D1", "score" : 47 }, {"name" : "Andrew Miller", "id" : "andrew-miller", "seed" : 2} ],#}
-			{#		[ {"name" : "James Coutry", "id" : "james-coutry", "seed" : 3}, {"name" : "Sam Merrill", "id" : "sam-merrill", "seed" : 4}],#}
-			{#		[ {"name" : "Anothy Hopkins", "id" : "anthony-hopkins", "seed" : 5}, {"name" : "Everett Zettersten", "id" : "everett-zettersten", "seed" : 6} ],#}
-			{#		[ {"name" : "John Scott", "id" : "john-scott", "seed" : 7}, {"name" : "Teddy Koufus", "id" : "teddy-koufus", "seed" : 8}],#}
-			{#		[ {"name" : "Arnold Palmer", "id" : "arnold-palmer", "seed" : 9}, {"name" : "Ryan Anderson", "id" : "ryan-anderson", "seed" : 10} ],#}
-			{#		[ {"name" : "Jesse James", "id" : "jesse-james", "seed" : 1}, {"name" : "Scott Anderson", "id" : "scott-anderson", "seed" : 12}],#}
-			{#		[ {"name" : "Josh Groben", "id" : "josh-groben", "seed" : 13}, {"name" : "Sammy Zettersten", "id" : "sammy-zettersten", "seed" : 14} ],#}
-			{#		[ {"name" : "Jake Coutry", "id" : "jake-coutry", "seed" : 15}, {"name" : "Spencer Zettersten", "id" : "spencer-zettersten", "seed" : 16}]#}
-			{#	],#}
-			{#	[#}
-			{#		[ {"name" : "Erik Zettersten", "id" : "erik-zettersten", "seed" : 1}, {"name" : "James Coutry", "id" : "james-coutry", "seed" : 3} ],#}
-			{#		[ {"name" : "Anothy Hopkins", "id" : "anthony-hopkins", "seed" : 5}, {"name" : "Teddy Koufus", "id" : "teddy-koufus", "seed" : 8} ],#}
-			{#		[ {"name" : "Ryan Anderson", "id" : "ryan-anderson", "seed" : 10}, {"name" : "Scott Anderson", "id" : "scott-anderson", "seed" : 12} ],#}
-			{#		[ {"name" : "Sammy Zettersten", "id" : "sammy-zettersten", "seed" : 14}, {"name" : "Jake Coutry", "id" : "jake-coutry", "seed" : 15} ]#}
-			{#	],#}
-			{#	[#}
-			{#		[ {"name" : "Erik Zettersten", "id" : "erik-zettersten", "seed" : 1}, {"name" : "Anothy Hopkins", "id" : "anthony-hopkins", "seed" : 5} ],#}
-			{#		[ {"name" : "Ryan Anderson", "id" : "ryan-anderson", "seed" : 10}, {"name" : "Sammy Zettersten", "id" : "sammy-zettersten", "seed" : 14} ]#}
-			{#	],#}
-			{#	[#}
-			{#		[ {"name" : "Erik Zettersten", "id" : "erik-zettersten", "seed" : 1}, {"name" : "Ryan Anderson", "id" : "ryan-anderson", "seed" : 10} ]#}
-			{#	],#}
-			{#	[#}
-			{#		[ {"name" : "Erik Zettersten", "id" : "erik-zettersten", "seed" : 1} ]#}
-			{#	]#}
-			{#];#}
-			console.warn(win.TestData)
-			// initializer
-			$(".my_gracket").gracket({ src : win.TestData });
-		})(window, document, jQuery);
-	</script>
+        {#win.TestData = [#}
+        {#            	[#}
+        {#		[ {"name" : "Erik Zettersten", "id" : "erik-zettersten", "seed" : 1}, {"name" : "Anothy Hopkins", "id" : "anthony-hopkins", "seed" : 5} ],#}
+        {#		[ {"name" : "Erik Zettersten", "id" : "erik-zettersten", "seed" : 1}, {"name" : "Anothy Hopkins", "id" : "anthony-hopkins", "seed" : 5} ],#}
+        {#		[ {"name" : "Erik Zettersten", "id" : "erik-zettersten", "seed" : 1}, {"name" : "Anothy Hopkins", "id" : "anthony-hopkins", "seed" : 5} ],#}
+        {#		[ {"name" : "Ryan Anderson", "id" : "ryan-anderson", "seed" : 10}, {"name" : "Sammy Zettersten", "id" : "sammy-zettersten", "seed" : 14} ]#}
+        {#	],#}
+        {##}
+        {##}
+        {#    [#}
+        {#        [{"name": "Erik Zettersten", "id": "erik-zettersten", "seed": 1}, {"name": "Ryan Anderson", "id": "ryan-anderson", "seed": 10}]#}
+        {#    ],#}
+        {#    [#}
+        {#        [{"name": "Erik Zettersten", "id": "erik-zettersten", "seed": 1}]#}
+        {#    ]#}
+        {#];#}
+
+    {#    win.TestData = [#}
+    {#        [#}
+    {#            [{'name': 'John James', 'id': 'John James', 'seed': 1}, {'name': 'Fresh Prince', 'id': 'Fresh Prince', 'seed': 1}],#}
+    {#            [{'name': 'King James', 'id': 'King James', 'seed': 1}, {'name': 'Heavy Hitter', 'id': 'Heavy Hitter', 'seed': 1}],#}
+    {#            [{'name': 'Joe Blake', 'id': 'Joe Blake', 'seed': 1}, {'name': 'None', 'id': 'none', 'seed': 1}],#}
+    {#            [{'name': 'by', 'id': 'Joe Blake', 'seed': 1}, {'name': 'by', 'id': 'none', 'seed': 1}],#}
+    {#],#}
+    {##}
+    {##}
+    {#            [#}
+    {#                [{'name': 'Game 1 Winner', 'id': 'John James', 'seed': 1}, {'name': 'Game 2 Winner', 'id': 'Fresh Prince', 'seed': 1}],#}
+    {#                [{'name': 'Game 3 Winner', 'id': 'King James', 'seed': 1}, {'name': 'Game 4 Winner', 'id': 'Heavy Hitter', 'seed': 1}],#}
+    {##}
+    {#            ],#}
+    {#                        [#}
+    {#                [{'name': 'R2 Game 1 Winner', 'id': 'John James', 'seed': 1}, {'name': 'R2 Game 2 Winner', 'id': 'Fresh Prince', 'seed': 1}],#}
+    {##}
+    {##}
+    {#            ],#}
+    {##}
+    {#                                    [#}
+    {#                [{'name': 'R3 Winner', 'id': 'John James', 'seed': 1}],#}
+    {##}
+    {##}
+    {#            ],#}
+    {#        ];#}
+
+
+        console.warn(win.TestData)
+        // initializer
+        $(".my_gracket").gracket({src: win.TestData});
+    })(window, document, jQuery);
+</script>
+</div>
 </body>
 </html>
