--- a/PoolToolWebApp-my_new_branch/poolTool/templates/thanks.html
+++ b/PoolToolWebApp-my_new_branch/poolTool/templates/thanks.html
@@ -1,26 +1,202 @@
+{#<!--#}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'poolTool/index.css' %}">
-<script src="{% static 'poolTool/jquery-3.3.1.min.js' %}"></script>
+{#<script src="{% static 'poolTool/jquery-3.3.1.min.js' %}"></script>#}
+{##}
+{#<body>#}
+{#    <hgroup>#}
+{#        <h1>Pool Tool Signup</h1>#}
+{#    </hgroup>#}
+{#    <form action=""{% url "index" %}"" method="post">{% csrf_token %}#}
+{#        {% for field in form %}#}
+{#            <div class="group">#}
+{#                {{ field }}#}
+{#                <label>{{ field.label_tag }}</label>#}
+{#                {{ field.errors }}#}
+{#            </div>#}
+{#        {% endfor %}#}
+{#        <!-- <div class="group">#}
+{#            <input id="name" type="text"><span class="highlight"></span><span class="bar"></span>#}
+{#            <label>Name</label>#}
+{#        </div>#}
+{#        <div class="group">#}
+{#            <input id="email" type="email"><span class="highlight"></span><span class="bar"></span>#}
+{#            <label>Email</label>#}
+{#        </div> -->#}
+{#        <button type="submit" class="button buttonBlue">Sign Up#}
+{#            <div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>#}
+{#        </button>#}
+{#    </form>#}
+{##}
+{#</body>#}
+{#<script>#}
+{#  $(window, document, undefined).ready(function() {#}
+{##}
+{#    $('input').blur(function() {#}
+{#      var $this = $(this);#}
+{#      if ($this.val())#}
+{#      $this.addClass('used');#}
+{#      else#}
+{#      $this.removeClass('used');#}
+{#    });#}
+{##}
+{#    var $ripples = $('.ripples');#}
+{##}
+{#    $ripples.on('click.Ripples', function(e) {#}
+{##}
+{#      var $this = $(this);#}
+{#      var $offset = $this.parent().offset();#}
+{#      var $circle = $this.find('.ripplesCircle');#}
+{##}
+{#      var x = e.pageX - $offset.left;#}
+{#      var y = e.pageY - $offset.top;#}
+{##}
+{#      $circle.css({#}
+{#        top: y + 'px',#}
+{#        left: x + 'px'#}
+{#      });#}
+{##}
+{#      $this.addClass('is-active');#}
+{##}
+{#    });#}
+{##}
+{#    $ripples.on('animationend webkitAnimationEnd mozAnimationEnd oanimationend MSAnimationEnd', function(e) {#}
+{#      $(this).removeClass('is-active');#}
+{#    });#}
+{##}
+{#  });#}
+{#</script>#}
+{#-->#}
+
+<!DOCTYPE html>
+<html lang="en">
 <head>
-       <link rel="icon" href="{% static 'admin/img/blackball.png'%}">
-    <title>Thanks</title>
+    <link rel="icon" href="{% static 'admin/img/blackball.png'%}">
+    <title>Sign up!</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--===============================================================================================-->
+{#    <link rel="icon" type="image/png" href="{% static 'admin/img/icons/favicon.ico' %}"/>#}
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="{% static 'admin/vendor/bootstrap/css/bootstrap.min.css' %}">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css"
+          href="{% static 'admin/fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="{% static 'admin/fonts/Linearicons-Free-v1.0.0/icon-font.min.css' %}">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="{% static 'admin/vendor/animate/animate.css' %}">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="{% static 'admin/vendor/css-hamburgers/hamburgers.min.css' %}">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="{% static 'admin/vendor/animsition/css/animsition.min.css' %}">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="{% static 'admin/vendor/select2/select2.min.css' %}">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="{% static 'admin/vendor/daterangepicker/daterangepicker.css' %}">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="{% static 'admin/css/util.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'admin/css/main.css' %}">
+    <!--===============================================================================================-->
 </head>
 <body>
-  <hgroup>
-    <h1>Pool Tool Signup</h1>
-  </hgroup>
 
+<div class="limiter">
+    <div class="tech-slideshow">
+  <div class="mover-1"></div>
+  <div class="mover-2"></div>
+</div>
+    <div class="container-login100" style="background-image: url({% static '/admin/img/bg-01.jpg' %});'">
+        <div class="wrap-login100 p-l-110 p-r-110 p-t-62 p-b-33">
   <form>
     <p style="text-align: center">
       Thanks, you're signed up
     </p>
   </form>
 
-    <form action=""{% url "players" %}""
+    <form action="{% url "players" %}">
 
 
         <button type="submit" class="button buttonBlue">View players
             <div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
         </button>
     </form>
+    <form action="{% url "fixtures" %}">
+
+
+        <button type="submit" class="button buttonBlue">View fixtures
+            <div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
+        </button>
+    </form>
+        </div>
+    </div>
+</div>
+
+
+<div id="dropDownSelect1"></div>
+
+<!--===============================================================================================-->
+<script src="{% static 'admin/vendor/jquery/jquery-3.2.1.min.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'admin/vendor/animsition/js/animsition.min.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'admin/vendor/bootstrap/js/popper.js' %}"></script>
+<script src="{% static 'admin/vendor/bootstrap/js/bootstrap.min.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'admin/vendor/select2/select2.min.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'admin/vendor/daterangepicker/moment.min.js' %}"></script>
+<script src="{% static 'admin/vendor/daterangepicker/daterangepicker.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'admin/vendor/countdowntime/countdowntime.js' %}"></script>
+<!--===============================================================================================-->
+<script src="{% static 'admin/js/main.js' %}"></script>
+
 </body>
+</html>
+
+{#<div class="tech-slideshow">#}
+{#  <div class="mover-1"></div>#}
+{#  <div class="mover-2"></div>#}
+{#</div>#}
+
+<style>
+.tech-slideshow {
+  height: auto;
+  max-width: auto;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+  transform: translate3d(0, 0, 0);
+}
+
+
+.tech-slideshow > div {
+  height: auto;
+  width: auto
+  background: url({% static '/admin/img/bg-01.jpg' %});
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  transform: translate3d(0, 0, 0);
+}
+.tech-slideshow .mover-1 {
+  animation: moveSlideshow 12s linear infinite;
+}
+.tech-slideshow .mover-2 {
+  opacity: 0;
+  transition: opacity 0.5s ease-out;
+  background-position: 0 -200px;
+  animation: moveSlideshow 15s linear infinite;
+}
+.tech-slideshow:hover .mover-2 {
+  opacity: 1;
+}
+
+@keyframes moveSlideshow {
+  100% {
+    transform: translateX(-66.6666%);
+  }
+}
+    </style>
